[SL] Filter was refactored

--- a/sakura-league/etc/styles/spreadsheet.css
+++ b/sakura-league/etc/styles/spreadsheet.css
@@ -45,16 +45,11 @@ h1 {
     font-family: Mga;
     font-weight: bold;
     color: azure;
-    margin: 15px 85px;
+    margin: 15px 5vw;
 }
 
 .filter span {
     color: cyan;
-}
-
-.filter img {
-    vertical-align: middle;
-    width: 18px;
     cursor: pointer;
 }
 
