--- a/sakura-league/etc/styles/spreadsheet.css
+++ b/sakura-league/etc/styles/spreadsheet.css
@@ -41,8 +41,35 @@ h1 {
     font-family: Mga;
     text-transform: uppercase;
     font-weight: bold;
-    margin: 50px 0px 30px;
+    margin: 50px 0 0;
     text-shadow: 1px 1px 2px black, 0 0 1em red;
+}
+
+.tabs {
+    text-align: center;
+    color: cyan;
+    text-shadow: 1px 1px 2px black, 0 0 1em black;
+}
+
+.tabs a {
+    display: inline-block;
+    cursor: pointer;
+    font-size: 30px;
+    font-family: 'Mga';
+    padding: 0 10px 10px;
+    font-weight: bold;
+    text-decoration: none;
+    margin: 30px 0;
+}
+
+.tabs a:visited {
+    color: cyan;
+    text-decoration: none;
+    text-shadow: 1px 1px 2px black, 0 0 1em black;
+}
+
+.tabs .active {
+    border-bottom: solid 3px azure;
 }
 
 .filter {
@@ -100,6 +127,9 @@ table .player_name {
 table .table_header td{
     text-align: center;
     cursor: pointer;
+    font-size: 22px;
+    color: aliceblue;
+    min-width: 90px;
 }
 
 table td {
