--- a/sakura-league/etc/styles/spreadsheet.css
+++ b/sakura-league/etc/styles/spreadsheet.css
@@ -50,26 +50,26 @@ h1 {
 }
 
 .tabs a {
-    color: cyan;
+    color: antiquewhite;
     text-shadow: 1px 1px 2px black, 0 0 1em black;
     display: inline-block;
     cursor: pointer;
-    font-size: 30px;
+    font-size: 40px;
     font-family: 'Mga';
-    padding: 0 10px 10px;
+    padding: 0 20px 10px;
     font-weight: bold;
     text-decoration: none;
     margin: 30px 0;
 }
 
 .tabs a:visited {
-    color: cyan;
+    color: antiquewhite;
     text-decoration: none;
     text-shadow: 1px 1px 2px black, 0 0 1em black;
 }
 
 .tabs .active {
-    border-bottom: solid 3px azure;
+    border-bottom: solid 3px white;
 }
 
 .filter {
