--- a/lesli/etc/styles/main.css
+++ b/lesli/etc/styles/main.css
@@ -3,49 +3,55 @@
 
 body {
     font-family: 'Roboto';
+    margin: 0;
+    padding: 0;
 }
 
 .navigation_wrapper {
-    float: left;
-    margin-top: 50px;
+    background-color: rgba(0, 0, 0, 0.8); 
+    text-align: center;
+    padding: 0 10px;
 }
 
 .navigation {
-    display: block;
-    margin: 0 10px 10px;
-    padding: 10px;
+    display: inline-block;
     cursor: pointer;
-    width: 150px;
+    margin: 0 10px;
     text-align: center;
-    border-radius: 5px;
-    background: #EDEDED;
-    border: 1px double #ddd;
-    color: black;
-    text-decoration: none;
-}
-
-.navigation:hover {
-    background: rgb(94, 94, 94);;
-    border: 1px double white;
     color: white;
 }
 
-.active {
-    background: black;
-    border: 1px double white;
-    color: white;
+.navigation .active {
+    margin-bottom: 0;
+    border-bottom: solid 2px white;
+    padding-bottom: 5px;
 }
 
-.inactive, .inactive:hover {
-    background: peachpuff;
-    color: darkred;
-    border: none;
+.navigation_wrapper .inactive {
+    color: gray;
+}
+
+.year_wrapper {
+    text-align: center;
+    border-right: solid 1px gray;
+    padding: 0 15px;
+    color: white;
+    float: left;
+}
+
+.year_wrapper .active {
+    color: red;
+}
+
+.year {
+    width: 20px;
+    display: inline-block;
+    cursor: pointer;
 }
 
 .items_wrapper {
-    width: 86%;
-    display: grid;
-    margin: auto;
+    position: relative;
+    width: 100%;
 }
 
 .items_wrapper div {
