--- a/lesli/etc/styles/table.css
+++ b/lesli/etc/styles/table.css
@@ -1,3 +1,8 @@
+.table_scroll {
+  overflow: auto;
+  height: 87%;
+}
+
 .table {
     width: 100%;
     border: none;
@@ -6,26 +11,33 @@
 }
 
 .activeOrderField .arrow {
-  border: solid black;
-  border-width: 0 3px 3px 0;
-  display: inline-block;
-  padding: 2px;
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 2px;
 }
 
 .activeOrderField .up {
-  transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);
-  margin: 0px 0px -1px 2px;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
+    margin: 0px 0px -1px 2px;
 }
 
 .activeOrderField .down {
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
-  margin: 0px 0px 2px 2px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    margin: 0px 0px 2px 2px;
 }
 
 .activeOrderField {
     color: darkred;
+}
+
+.table thead {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+    z-index: 1;
 }
 
 .table thead th {
@@ -47,11 +59,11 @@
     border-right: 1px solid #ddd;
 }
 
-.table thead tr th:first-child {
+.table thead tr:first-child th:first-child {
     border-radius: 20px 0 0 0;
 }
 
-.table thead tr th:last-child {
+.table thead tr:first-child th:last-child {
     border-radius: 0 20px 0 0;
 }
 
