[VP] Graph and products tab was applied for 3 year files

--- a/lesli/etc/styles/main.css
+++ b/lesli/etc/styles/main.css
@@ -59,8 +59,8 @@ body {
 }
 
 .curveChart {
-    width: 86%;
-    height: 600px;
+    width: 100%;
+    height: 87%;
     display: flex;
     margin: auto;
 }
