--- a/lesli/etc/styles/main.css
+++ b/lesli/etc/styles/main.css
@@ -71,10 +71,16 @@ body {
 }
 
 .search-input {
+    opacity: 0;
+    pointer-events: none;
+    padding: 10px;
+}
+
+.search-input.enabled {
     height: 34px;
     border-radius: 5px;
-    border: solid 1px black;
-    padding: 10px;
     outline: none;
-    font-family: 'Roboto';
+    padding: 10px;
+    opacity: 1;
+    pointer-events: all;
 }
