--- a/lesli/etc/styles/table.css
+++ b/lesli/etc/styles/table.css
@@ -7,7 +7,7 @@
     width: 100%;
     border: none;
     margin-bottom: 20px;
-    border-collapse: separate;
+    border-collapse: collapse;
 }
 
 .activeOrderField {
@@ -23,29 +23,16 @@
 
 .table thead th {
     font-weight: bold;
-    border: none;
+    border-right: solid 1px white;
     padding: 10px 15px;
     background: #EDEDED;
     font-size: 14px;
-    border-top: 1px solid #ddd;
     cursor: pointer;
     text-align: center;
 }
 
-.table tr th:first-child, .table tr td:first-child {
-    border-left: 1px solid #ddd;
-}
-
-.table tr th:last-child, .table tr td:last-child {
-    border-right: 1px solid #ddd;
-}
-
-.table thead tr:first-child th:first-child {
-    border-radius: 20px 0 0 0;
-}
-
-.table thead tr:first-child th:last-child {
-    border-radius: 0 20px 0 0;
+.table thead th.long_year {
+    border-bottom: solid 1px white;
 }
 
 .table tbody td {
@@ -54,6 +41,11 @@
     padding: 10px 15px;
     font-size: 14px;
     vertical-align: top;
+    border-bottom: solid 1px black;
+}
+
+.table tbody tr:last-child td {
+    border:none;
 }
 
 .table tbody td:nth-child(2) {
@@ -62,16 +54,4 @@
 
 .table tbody tr:nth-child(even) {
     background: #F8F8F8;
-}
-
-.table tbody tr:last-child td{
-    border-bottom: 1px solid #ddd;
-}
-
-.table tbody tr:last-child td:first-child {
-    border-radius: 0 0 0 20px;
-}
-
-.table tbody tr:last-child td:last-child {
-    border-radius: 0 0 20px 0;
 }
