--- a/lesli/etc/styles/table.css
+++ b/lesli/etc/styles/table.css
@@ -42,6 +42,7 @@
     font-size: 14px;
     vertical-align: top;
     border-bottom: solid 1px black;
+    cursor: pointer;
 }
 
 .table tbody tr:last-child td {
