--- a/lesli/etc/styles/table.css
+++ b/lesli/etc/styles/table.css
@@ -15,10 +15,13 @@
 }
 
 .table thead {
-    position: -webkit-sticky;
     position: sticky;
     top: 0;
     z-index: 1;
+}
+
+.popup-table thead {
+    position: static;
 }
 
 .table thead th {
