--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -5,7 +5,7 @@ body {
 
 h1 {
     color: white;
-    font-size: 90px;
+    font-size: 100px;
     font-family: serif;
 }
 
@@ -13,15 +13,8 @@ table {
     border: solid 2px white;
     color: white;
     font-family: serif;
-    font-size: 25px;
+    font-size: 60px;
 }
-
-@media only screen and (max-width: 767px) {
-    table {
-      font-size: 50px;
-    }
-}
-
 
 td {
     border: dashed 1px white;
@@ -31,14 +24,15 @@ td {
 
 .mafia-table {
     display: inline-block;
-    padding: 0px 90px 50px 0px;
+    padding-bottom: 50px;
 }
 
 .mafia-table p {
     font-family: Calisto MT;
-    font-size: 25px !important;
+    font-size: 50px !important;
     color: white;
     border-bottom: none !important;
+    margin: 20px 0;
 }
 
 .game {
@@ -47,7 +41,16 @@ td {
 
 .game p {
     color: white;
-    font-size: 35px;
+    font-size: 70px;
     border-bottom: solid 3px white;
-    padding-bottom: 20px;
+    padding-top: 50px;
+    margin: 20px 0;
+}
+
+a {
+    color: white;
+    text-decoration: underline;
+    font-family: serif;
+    font-size: 35px;
+    margin: 0 20px;
 }
