--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -1,11 +1,11 @@
 body {
     background: url(../images/background.jpg);
-    padding: 30px 0 0 15%;
+    padding: 30px 15% 0 15%;
 }
 
 h1 {
     color: white;
-    font-size: 100px;
+    font-size: 90px;
     font-family: serif;
 }
 
@@ -36,14 +36,14 @@ td {
 }
 
 .game {
-    padding-right: 15%;
+
 }
 
 .game p {
     color: white;
     font-size: 70px;
     border-bottom: solid 3px white;
-    padding-top: 50px;
+    padding: 50px 0 20px;
     margin: 20px 0;
 }
 
@@ -51,6 +51,6 @@ a {
     color: white;
     text-decoration: underline;
     font-family: serif;
-    font-size: 35px;
+    font-size: 30px;
     margin: 0 20px;
 }
