--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -1,5 +1,8 @@
 body {
     background: url(../images/background.jpg);
+}
+
+.wrapper {
     padding: 30px 15% 0 15%;
 }
 
@@ -7,6 +10,7 @@ h1 {
     color: white;
     font-size: 90px;
     font-family: serif;
+    margin-top: 20px;
 }
 
 table {
@@ -35,8 +39,23 @@ td {
     margin: 20px 0;
 }
 
-.game {
+.top {
+  --offset: 50px;
 
+  position: sticky;
+  bottom: 20px;
+  margin-right: 10px;
+  place-self: end;
+  margin-top: calc(100vh + var(--offset));
+  text-decoration: none;
+  padding: 30px;
+  font-family: sans-serif;
+  font-size: 40px;
+  color: #fff;
+  background: #000;
+  border-radius: 100px;
+  white-space: nowrap;
+  float: right;
 }
 
 .game p {
