--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -6,6 +6,10 @@ body {
     padding: 30px 15% 0 15%;
 }
 
+.header {
+    text-align: center;
+}
+
 h1 {
     color: white;
     font-size: 90px;
@@ -70,6 +74,6 @@ a {
     color: white;
     text-decoration: underline;
     font-family: serif;
-    font-size: 30px;
+    font-size: 27px;
     margin: 0 20px;
 }
