--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -10,11 +10,19 @@ body {
     text-align: center;
 }
 
+.header img {
+    width: 100px;
+    position: relative;
+    right: 20px;
+    top: 20px;
+}
+
 h1 {
     color: white;
-    font-size: 90px;
+    font-size: 75px;
     font-family: serif;
     margin-top: 20px;
+    display: inline-block;
 }
 
 table {
