--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -1,5 +1,5 @@
 body {
-    background: url(../images/background.jpg);
+    background: url(../images/background.png);
 }
 
 .wrapper {
@@ -63,8 +63,8 @@ td {
   padding: 30px;
   font-family: sans-serif;
   font-size: 40px;
-  color: #fff;
-  background: #000;
+  color: black;
+  background: white;
   border-radius: 100px;
   white-space: nowrap;
   float: right;
