--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -25,11 +25,16 @@ h1 {
     margin-top: 35px;
 }
 
+.total {
+    text-align: center;
+}
+
 .total table {
     border: solid 2px white;
     color: white;
     font-family: serif;
-    font-size: 30px;
+    font-size: 1.5em;
+    display: inline-block;
 }
 
 .game table {
