--- a/esperanto/styles/main.css
+++ b/esperanto/styles/main.css
@@ -1,5 +1,11 @@
-h1 {
-    text-align: center;
+.header-image {
+    margin: auto;
+    display: block;
+    width: 500px;
+}
+
+.content {
+    margin-top: 50px;
 }
 
 .item-pair {
@@ -7,12 +13,42 @@ h1 {
     width: 500px;
     margin: auto;
     display: flex;
+    font-family: cursive;
 }
 
 .item-pair p {
     text-align: center;
     min-width: 200px;
     cursor: pointer;
-    border: solid 1px black;
+    border: solid 2px black;
+    border-radius: 10px;
     padding: 10px;
+}
+
+.congratulation {
+    display: none;
+}
+
+.congratulation-info {
+    font-family: cursive;
+    text-align: center;
+    font-size: 100px;
+    color: hotpink;
+    margin: 50px 0 20px;
+}
+
+.try-again {
+    font-family: cursive;
+    text-align: center;
+    font-size: 30px;
+    color: green;
+    margin: 0;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+  .header-image
+    width: 1000px;
+  }
 }
