--- a/esperanto/styles/main.css
+++ b/esperanto/styles/main.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Skellyman;
+    src: url(fonts/skellyman.ttf);
+}
+
 .header-image {
     margin: auto;
     display: block;
@@ -13,20 +18,37 @@
     width: 500px;
     margin: auto;
     display: flex;
-    font-family: cursive;
+    font-family: Skellyman;
+    font-weight: bold;
 }
 
 .item-pair p {
     text-align: center;
     min-width: 200px;
     cursor: pointer;
-    border: solid 2px black;
+    border: solid 2px forestgreen;
     border-radius: 10px;
     padding: 10px;
+    transform-style: preserve-3d;
+    transition: all 175ms cubic-bezier(0, 0, 1, 1) 0s;
+    color: forestgreen;
+}
+
+.word--selected {
+    background-color: rgba(143,188,143, 0.2);
+    color: darkgreen;
+}
+
+.word--inactive {
+    background-color: white;
+    color: rgba(211,211,211) !important;
+    border-color: rgba(211,211,211) !important;
+    pointer-events: none;
 }
 
 .congratulation {
     display: none;
+    margin: 50px;
 }
 
 .congratulation-info {
@@ -34,7 +56,7 @@
     text-align: center;
     font-size: 100px;
     color: hotpink;
-    margin: 50px 0 20px;
+    margin: 0;
 }
 
 .try-again {
@@ -47,8 +69,26 @@
     cursor: pointer;
 }
 
-@media (max-width: 1000px) {
-  .header-image
-    width: 1000px;
+@media (max-width: 767px) {
+  .header-image {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 10px;
+  }
+
+  .item-pair {
+    width: 400px;
+  }
+
+  .item-pair p {
+    min-width: 165px;
+  }
+
+  .congratulation-info {
+      font-size: 70px;
+  }
+
+  .try-again {
+      font-size: 25px;
   }
 }
