--- a/esperanto/styles/main.css
+++ b/esperanto/styles/main.css
@@ -15,7 +15,7 @@ body {
 }
 
 .content {
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 .item-pair {
@@ -42,6 +42,12 @@ body {
 .word--selected {
     background-color: rgba(143,188,143, 0.2);
     color: darkgreen;
+}
+
+.word--incorrect {
+    background-color: rgba(255,182,193,0.5);
+    border: solid 2px rgb(255,182,193) !important;
+    color: brown !important;
 }
 
 .word--inactive {
