[ES] Version 1.1.6 Refresh button was added

--- a/esperanto/styles/main.css
+++ b/esperanto/styles/main.css
@@ -91,6 +91,10 @@ body {
         padding: 10px;
     }
 
+    .content {
+        margin-top: 20px;
+    }
+
     .item-pair {
         width: 100%;
     }
@@ -110,4 +114,7 @@ body {
     .counter-error {
         min-width: 130px;
     }
+
+    .refresh-link {
+        margin: 20px auto;
 }
