--- a/sakura/etc/styles/fantasy.css
+++ b/sakura/etc/styles/fantasy.css
@@ -73,3 +73,24 @@ h1 {
 .no-select p {
     color: red;
 }
+
+.team-button {
+    margin: 0 auto 20px;
+    display: none;
+    min-width: 270px;
+    min-height: 50px;
+    background-color: lightgrey;
+    border: none;
+    border-radius: 5px;
+    color: black;
+    font-size: 20px;
+    font-family: 'Hanzi';
+    cursor: pointer;
+}
+
+.points {
+    text-align: center;
+    font-size: 27px;
+    color: lightpink;
+    font-family: 'Hanzi';
+}
