[S2] Div mobile select was fixed

--- a/sakura/etc/styles/fantasy.css
+++ b/sakura/etc/styles/fantasy.css
@@ -38,6 +38,7 @@ h1 {
     padding: 25px;
     text-align: center;
     cursor: pointer;
+    -webkit-tap-highlight-color: transparent;
 }
 
 .player {
