--- a/sakura/etc/styles/fantasy.css
+++ b/sakura/etc/styles/fantasy.css
@@ -46,7 +46,7 @@ h1 {
     height: 200px;background-position: center;
     background-size: cover;
     border-radius: 90%;
-    border: solid 1px rgba(0,00,00,0.85);
+    border: solid 1px transparent;
 }
 
 .player-wrapper p {
