--- a/sakura/etc/styles/fantasy.css
+++ b/sakura/etc/styles/fantasy.css
@@ -110,6 +110,8 @@ h1 {
     padding-top: 280px;
 }
 
+.main-table,
+.solo-table,
 .main-fanstasy-table {
     overflow-x: scroll;
 
@@ -134,6 +136,17 @@ table th {
     padding: 20px;
 }
 
+.main-table th {
+    font-size: 14px;
+    padding: 10px;
+}
+
+.main-table td {
+    border: dotted 1px white;
+    font-size: 12px;
+    padding: 10px;
+}
+
 table td {
     border: solid 1px white;
     color: white;
@@ -149,4 +162,38 @@ td.player-name {
 
 td.score {
     min-width: 50px;
+}
+
+.solo-player {
+    display: flex;
+    align-items: center;
+}
+
+.solo-player img {
+    width: 75;
+    height: 75;
+    border-radius: 90%;
+    padding: 0px 15px;
+}
+
+.solo-table {
+    display: none;
+}
+
+.divisions {
+    text-align: center;
+}
+
+.divisions p {
+    display: inline-block;
+    font-size: 20px;
+    font-family: 'Hanzi';
+    color: antiquewhite;
+    padding: 20px;
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+#teams {
+    color: lightpink;
 }
