[S2] teamates font was updated

--- a/sakura/etc/styles/fantasy.css
+++ b/sakura/etc/styles/fantasy.css
@@ -260,9 +260,8 @@ td.score {
     cursor: pointer;
 }
 
-p.teamatese {
-    font-size: 12px;
-    font-family: 'Times New Roman';
+p.teamates {
+    font-size: 8px;
     line-height: 12px;
 }
 
