--- a/consigliere/styles/main.css
+++ b/consigliere/styles/main.css
@@ -1,5 +1,16 @@
+@font-face {
+    font-family: Benzier-Sans-Bold;
+    src: url(../fonst/Benzier\ Sans\ Bold.ttf);
+}
+
+@font-face {
+    font-family: Benzier-Sans-Regular;
+    src: url(../fonst/Benzier\ Sans\ Regular.ttf);
+}
+
 body {
     background: url(../images/background.png);
+    font-family: Benzier-Sans-Regular;
 }
 
 .total-wrapper {
@@ -24,8 +35,7 @@ body {
 
 h1 {
     color: white;
-    font-size: 85px;
-    font-family: serif;
+    font-size: 100px;
     margin: 0;
     display: inline-block;
 }
@@ -37,7 +47,6 @@ h1 {
 .total table {
     border: solid 2px white;
     color: white;
-    font-family: serif;
     font-size: 1.5em;
     display: inline-block;
 }
@@ -46,7 +55,6 @@ h1 {
     border: solid 2px white;
     border-collapse: collapse;
     color: white;
-    font-family: serif;
     font-size: 20px;
     width: 100%;
 }
@@ -54,7 +62,7 @@ h1 {
 td {
     border: solid 1px white;
     text-align: center;
-    height: 45px;
+    height: 70px;
 }
 
 .mafia-table-wrapper {
@@ -68,8 +76,7 @@ td {
 }
 
 .mafia-table p {
-    font-family: Calisto MT;
-    font-size: 50px !important;
+    font-size: 35px;
     color: white;
     border-bottom: none !important;
     margin: 20px 0;
@@ -83,37 +90,17 @@ td {
 }
 
 .total-mafia-table p {
-    font-family: Calisto MT;
     font-size: 50px !important;
     color: white;
     border-bottom: none !important;
     margin: 20px 0;
 }
 
-.top {
-  --offset: 50px;
-
-  position: sticky;
-  bottom: 20px;
-  margin-right: 10px;
-  place-self: end;
-  margin-top: calc(100vh + var(--offset));
-  text-decoration: none;
-  padding: 30px;
-  font-family: sans-serif;
-  font-size: 40px;
-  color: black;
-  background: white;
-  border-radius: 100px;
-  white-space: nowrap;
-  float: right;
-}
-
 .game-number {
     color: white;
-    font-size: 70px;
-    padding: 70px 0 20px;
-    margin: 20px 0;
+    font-size: 60px;
+    padding-top: 70px;
+    margin: 0;
     text-align: center;
 }
 
@@ -126,8 +113,7 @@ td {
 
 a {
     color: white;
-    text-decoration: underline;
-    font-family: serif;
+    text-decoration: none;
     font-size: 27px;
     margin: 20px;
     display: inline-block;
